fixed card header alignment

--- a/src/components/Layout/HeaderCard.scss
+++ b/src/components/Layout/HeaderCard.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variables.css';
 
 span {
-	display: block;
+	display: flex;
 	padding: 0.75rem 0 0 1rem;
 }
 
@@ -17,4 +17,5 @@ span {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
+	align-content: center;
 }
